# OpenGLLessons

./: CMakeLists.txt  Gl.cpp  Gl.h  OpenGLApp.cpp  OpenGLApp.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Utils.cpp  Utils.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  Window.cpp  Window.h  main.cpp
assets/shaders/: main.frag  main.vert  mainFrag.glsl  mainVert.glsl
